syntax = "proto2";

import "nanopb.proto";
import "enums.proto";

message I2CPeripheral {
  required int32 block = 1;
  required int32 sda = 2;
  required int32 scl = 3;
  required int32 clock = 4;
}

message SPIPeripheral {
  required int32 block = 1;
  required int32 mosi = 2;
  required int32 miso = 3;
  required int32 sck = 4;
  required int32 clock = 5;
}

message Adxl345Peripheral { required I2CPeripheral i2c = 1; }

message Lis3dhPeriperhal { required I2CPeripheral i2c = 1; }

message Mpu6050Periperhal { required I2CPeripheral i2c = 1; }

message Max1704xPeripheral { required I2CPeripheral i2c = 1; }

message Mpr121Peripheral {
  required I2CPeripheral i2c = 1;
  required int32 touchpadCount = 2;
  required int32 ddrPins = 3;    // pin data direction register
  required int32 enablePins = 4; // pin enable
}

message WiiPeripheral {
  required I2CPeripheral i2c = 1;
}

message CrazyGuitarNeckPeripheral {
  required I2CPeripheral i2c = 1;
}

message GuitarHero5NeckPeripheral {
  required I2CPeripheral i2c = 1;
}

message DJHeroTurntablePeripheral {
  required I2CPeripheral i2c = 1;
}

message BandHeroDrumPeripheral {
  required I2CPeripheral i2c = 1;
}

message SerialMidiPeripheral {
  optional int32 tx = 1;
  optional int32 rx = 2;
}
message UsbHostPeripheral {
  required int32 dp = 1;
  required bool enable5v = 2;
  required bool dmFirst = 3;
}
message MultiplexerPeripheral {
  required int32 inputPin = 1;
  required bool sixteenChannel = 2;
  required int32 s0Pin = 3;
  required int32 s1Pin = 4;
  required int32 s2Pin = 5;
  optional int32 s3Pin = 6;
}
message WorldTourDrumPeripheral {
  required SPIPeripheral spi = 1;
}
message PSXPeripheral {
  required SPIPeripheral spi = 1;
  required int32 attPin = 2;
  required int32 ackPin = 3;
}
message SNESPeripheral {
  required int32 clockPin = 1;
  required int32 latchPin = 2;
  required int32 dataPin = 3;
}
message JoybusPeripheral {
  required int32 dataPin = 1;
}

message WiiEmulationPeripheral {
  required I2CPeripheral i2c = 1;
}
message PSXEmulationPeripheral {
  required int32 dataPin = 1;
  required int32 commandPin = 2;
  required int32 attentionPin = 3;
  required int32 clockPin = 4;
  required int32 acknowledgePin = 5;
}
message GamecubeEmulationPeripheral {
  required int32 dataPin = 1;
}
message Nintendo64EmulationPeripheral {
  required int32 dataPin = 1;
}

message Peripheral {
  oneof peripheral {
    Adxl345Peripheral adxl = 1;
    Lis3dhPeriperhal lis3dh = 2;
    Mpu6050Periperhal mpu6050 = 3;
    Max1704xPeripheral max170x = 4;
    Mpr121Peripheral mpr121 = 5;
    WiiPeripheral wii = 6;
    CrazyGuitarNeckPeripheral crazyGuitarNeck = 7;
    GuitarHero5NeckPeripheral gh5Neck = 8;
    DJHeroTurntablePeripheral djhTurntable = 9;
    BandHeroDrumPeripheral bhDrum = 10;
    SerialMidiPeripheral midiSerial = 11;
    UsbHostPeripheral usbHost = 12;
    MultiplexerPeripheral multiplexer = 13;
    WorldTourDrumPeripheral worldTourDrum = 14;
    PSXPeripheral psx = 15;
    SNESPeripheral snes = 16;
    JoybusPeripheral joybus = 17;
    WiiEmulationPeripheral wiiEmulation = 18;
    PSXEmulationPeripheral psxEmulation = 19;
    GamecubeEmulationPeripheral gamecubeEmulation = 20;
    Nintendo64EmulationPeripheral nintendo64Emulation = 21;
  }
}